fix heading issues, bottom line, alignments

--- a/assets/css/custome.css
+++ b/assets/css/custome.css
@@ -280,7 +280,7 @@ footer a:hover {
 
 .section-heading {
   color: red;
-  font-size: 2em;
+  font-size: 1.3em;
   font-weight: 900;
 }
 
@@ -313,4 +313,8 @@ footer a:hover {
 
 .form-div h1 {
   font-size: 15px;
+}
+
+.display-none{
+  display: none;
 }
